feat(user-product-panel): aggregate responsive division

--- a/src/app/filter-product-user/filter-product-user.component.html
+++ b/src/app/filter-product-user/filter-product-user.component.html
@@ -22,6 +22,9 @@
           <mat-radio-button class="category-radio-button" [value]="category">{{category}}</mat-radio-button>
         }
       </mat-radio-group>
+      <div class="expansion-panel-footer">
+        <button mat-button color="primary">Filter</button>
+      </div>
 
     </mat-expansion-panel>
 
@@ -47,7 +50,11 @@
 <!--        {{brand}}-->
 
 <!--      } para comprobar que el checkbox funcione-->
+      <div class="expansion-panel-footer">
+        <button mat-button color="primary">Filter</button>
+      </div>
     </mat-expansion-panel>
+
 
     <!-- Filter for Price -->
     <mat-expansion-panel (opened)="panelOpenState = true"
@@ -56,10 +63,35 @@
         <mat-panel-title>
           Price
         </mat-panel-title>
-
       </mat-expansion-panel-header>
-      <p>I'm visible because I am open</p>
+
+      <div class="container-min-max-fields">
+        <mat-form-field floatLabel="always">
+          <mat-label>Minimum</mat-label>
+          <input matInput type="number" class="example-right-align" placeholder="0">
+          <span matTextPrefix>$&nbsp;</span>
+          <span matTextSuffix>.00</span>
+        </mat-form-field>
+
+        <!-- Maximum field -->
+        <mat-form-field floatLabel="always">
+          <mat-label>Maximum</mat-label>
+          <input matInput type="number" class="example-right-align" placeholder="0">
+          <span matTextPrefix>$&nbsp;</span>
+          <span matTextSuffix>.00</span>
+        </mat-form-field>
+
+      </div>
+
+
+      <div class="expansion-panel-footer">
+        <button mat-button color="primary">Filter</button>
+      </div>
     </mat-expansion-panel>
+
+
+
+
 
     <!-- Filter for Review -->
     <mat-expansion-panel (opened)="panelOpenState = true"
@@ -70,7 +102,18 @@
         </mat-panel-title>
 
       </mat-expansion-panel-header>
-      <p>I'm visible because I am open</p>
+
+      <div class="container-review-slider">
+        <mat-slider min="1" max="5" discrete  >
+          <input value="1" matSliderStartThumb>
+          <input value="2" matSliderEndThumb>
+        </mat-slider>
+
+      </div>
+
+      <div class="expansion-panel-footer">
+        <button mat-button color="primary">Filter</button>
+      </div>
     </mat-expansion-panel>
 
 
