--- a/src/app/filter-product-user/filter-product-user.component.css
+++ b/src/app/filter-product-user/filter-product-user.component.css
@@ -21,3 +21,40 @@ mat-card-header{
   display: flex;
   flex-direction: column;
 }
+
+.container-min-max-fields{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.container-review-slider{
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+mat-slider {
+  width: 200px;
+}
+
+.expansion-panel-footer{
+  width: 100%;
+  display: flex;
+  justify-content: end;
+}
+.expansion-panel-footer button{
+  margin-right: 5px;
+}
+
+@media only screen and (min-width: 1000px) {
+  .card-container{
+    width: 450px;
+    height: auto;
+    border: none;
+    box-shadow: none;
+  }
+
+
+}
