--- a/src/app/public/pages/user-page/user-page.component.css
+++ b/src/app/public/pages/user-page/user-page.component.css
@@ -41,7 +41,7 @@
 button.mat-icon-button {
   margin: 0 8px;
 }
-.user-icon{
+.account-icon{
   display: none;
 }
 
@@ -60,23 +60,31 @@ button.mat-icon-button {
   width: 100%;
   margin-top: 20px;
   padding: 30px;
-  background-color: #1B84FF;
+  display: flex;
+  justify-content: center;
+
+}
+.content-container{
+  height: auto;
+  padding: 30px 0;
 }
 
-@media only screen and (min-width: 1000px) {
+@media only screen and (min-width: 1159px) {
   .filter-section {
     display: none;
   }
   .content-container{
     display: flex;
-
   }
 
 
 }
 /* Show toolbar-title only on tablet screens */
-@media (min-width: 600px) and (max-width: 960px) {
+@media (min-width: 600px)  {
   .toolbar-title {
+    display: inline-block;
+  }
+  .account-icon{
     display: inline-block;
   }
 }
