feat(product-detail): aggregate styles in product view detail

--- a/src/app/user-products/components/product-view/product-view.component.html
+++ b/src/app/user-products/components/product-view/product-view.component.html
@@ -14,7 +14,7 @@
 <!--  </mat-card-content>-->
   <div class="container-footer">
     <mat-card-actions>
-      <button mat-flat-button color="primary">View More</button>
+      <button mat-flat-button color="primary" [routerLink]="['/users/product', product.id]" >View More</button>
     </mat-card-actions>
   </div>
 
