--- a/src/app/review-product/components/list-reviews/list-reviews.component.html
+++ b/src/app/review-product/components/list-reviews/list-reviews.component.html
@@ -1,19 +1,18 @@
-<!--  <mat-list>-->
     @for (review of reviewDetails; track review.id){
-<!--    <mat-list-item>-->
-      <div>
-        <div>
-          <p>{{ review.userName}}</p>
-          <p>{{review.rating}}</p>
+      <div style="margin: 25px 0; width: 100%;padding: 5px" >
+        <div style="display: flex;justify-content: space-between">
+          <p style="font-weight: 550;font-size: 16px" class="review-user">{{ review.userName}}</p>
+          <span class="review-rating" style="margin-right: 10px">{{review.rating}}</span>
         </div>
-        <div>
-          {{review.content}}
+        <div class="review-content">
+          <p style="font-size: 14px">
+            {{review.content}}
+          </p>
+
         </div>
       </div>
-<!--    </mat-list-item>-->
-<!--    <mat-divider></mat-divider>-->
     }
-<!--  </mat-list>-->
+
 
 
 
