--- a/src/app/user-products/components/user-product-detail/user-product-detail.component.css
+++ b/src/app/user-products/components/user-product-detail/user-product-detail.component.css
@@ -49,6 +49,18 @@
   height: 250px;
 }
 
+.review-section{
+  width: 100%;
+  height: auto;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid #CACEDE;
+  border-radius: 25px;
+  padding: 2rem;
+
+}
 .product-information-section{
   width: 100%;
   height: 400px;
@@ -124,6 +136,9 @@
   .aux-container{
     width: 600px;
   }
+  .review-section{
+    width: 600px;
+  }
 }
 
 @media (min-width: 1200px) {
@@ -131,7 +146,11 @@
   .principal-detail-section{
     flex-direction: row;
     justify-content: center;
+  }
 
+  .second-container{
+    flex-direction: row-reverse;
+    align-items: start;
   }
 
   .product-image-section{
