--- a/src/app/public/pages/authentication/stores-auth/stores-auth.component.html
+++ b/src/app/public/pages/authentication/stores-auth/stores-auth.component.html
@@ -1,18 +1,20 @@
-<mat-card class="auth-card">
-  <mat-card-title class="auth-card-title">REGISTRO DE TIENDA</mat-card-title>
-  <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
-    <mat-form-field>
-      <input matInput placeholder="Nombre de la tienda" formControlName="name" required>
-    </mat-form-field>
-    <mat-form-field>
-      <input matInput placeholder="Número RUC" formControlName="ruc" required>
-    </mat-form-field>
-    <mat-form-field>
-      <input matInput placeholder="Email" formControlName="email" required>
-    </mat-form-field>
-    <mat-form-field>
-      <input matInput placeholder="Teléfono" formControlName="phone" required>
-    </mat-form-field>
-    <button mat-raised-button color="primary" type="submit">Registrarse</button>
-  </form>
-</mat-card>
+<div class="container">
+  <mat-card class="auth-card">
+    <mat-card-title class="auth-card-title">REGISTRO DE TIENDA</mat-card-title>
+    <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
+      <mat-form-field>
+        <input matInput placeholder="Nombre de la tienda" formControlName="name" required>
+      </mat-form-field>
+      <mat-form-field>
+        <input matInput placeholder="Número RUC" formControlName="ruc" required>
+      </mat-form-field>
+      <mat-form-field>
+        <input matInput placeholder="Email" formControlName="email" required>
+      </mat-form-field>
+      <mat-form-field>
+        <input matInput placeholder="Teléfono" formControlName="phone" required>
+      </mat-form-field>
+      <button mat-raised-button color="primary" type="submit" routerLink="/users/auth/final-page">Registrarse</button>
+    </form>
+  </mat-card>
+</div>
