--- a/src/app/public/pages/final-register-page/final-register-page.component.css
+++ b/src/app/public/pages/final-register-page/final-register-page.component.css
@@ -1,37 +1,39 @@
-html, body {
-  height: 100%;
-  margin: 0;
+.container-auth {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #f5f5f5; /* Fondo gris claro para mejor apariencia */
-}
-
-.container {
   height: 80vh;
   width: 100vw;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  padding: 20px;
+  box-sizing: border-box;
+  background-color: #ffffff; /* Fondo gris claro para mejor apariencia */
 }
 
-.auth-card {
-  width: 350px;
+.auth-page-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  max-width: 500px;
+}
+
+mat-card {
+  width: 100%;
   padding: 20px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   background: white;
   border-radius: 8px;
+  text-align: center;
 }
 
-.auth-card-title {
-  text-align: center;
-  font-size: 1.5em;
+h1 {
+  font-size: 2em;
   margin-bottom: 20px;
 }
 
-mat-form-field {
-  width: 100%;
-  margin-bottom: 16px;
+p {
+  font-size: 1.2em;
+  margin-bottom: 20px;
 }
 
 button[mat-raised-button] {
@@ -39,4 +41,5 @@ button[mat-raised-button] {
   padding: 10px;
   font-size: 1em;
   text-transform: uppercase;
+  margin-bottom: 10px;
 }
