--- a/src/app/public/pages/user-page/user-page.component.html
+++ b/src/app/public/pages/user-page/user-page.component.html
@@ -3,7 +3,7 @@
     <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
       <mat-icon>menu</mat-icon>
     </button>
-    <span class="toolbar-title">My App</span>
+    <span class="toolbar-title">ComPeru</span>
   </div>
 
   <input class="search-input" matInput placeholder="Search" >
