--- a/src/app/admin-orders/pages/orders-management/orders-management.component.html
+++ b/src/app/admin-orders/pages/orders-management/orders-management.component.html
@@ -1,1 +1,64 @@
-<p>orders-management works!</p>
+<!-- Orders Catalogue -->
+<div class="table-wrapper">
+  <h1>Orders</h1>
+
+  <!-- Data table -->
+  <table mat-table [dataSource]="dataSource" class="mat-elevation-z5" matSort>
+
+    <!-- Id column -->
+    <ng-container matColumnDef="id">
+      <th *matHeaderCellDef mat-header-cell mat-sort-header> Order Id</th>
+      <td *matCellDef="let element" mat-cell>{{ element.id }}</td>
+    </ng-container>
+
+    <!-- userId column -->
+    <ng-container matColumnDef="userId">
+      <th *matHeaderCellDef mat-header-cell mat-sort-header> User Id</th>
+      <td *matCellDef="let element" mat-cell>{{ element.userId }}</td>
+    </ng-container>
+
+    <!-- productId column -->
+    <ng-container matColumnDef="productId">
+      <th *matHeaderCellDef mat-header-cell mat-sort-header> Product Id</th>
+      <td *matCellDef="let element" mat-cell>
+        <a [routerLink]="['/users/product', element.id]"> {{ element.productId }} </a></td>
+    </ng-container>
+
+    <!-- Shipping address column -->
+    <ng-container matColumnDef="shippingAddress">
+      <th *matHeaderCellDef mat-header-cell mat-sort-header> Shipping Address</th>
+      <td *matCellDef="let element" mat-cell>{{ element.shippingAddress }}</td>
+    </ng-container>
+
+    <!-- Shipping address column -->
+    <ng-container matColumnDef="orderDate">
+      <th *matHeaderCellDef mat-header-cell mat-sort-header> Order Date</th>
+      <td *matCellDef="let element" mat-cell>{{ element.orderDate }}</td>
+    </ng-container>
+
+    <!-- Order status column -->
+    <ng-container matColumnDef="orderStatus">
+      <th *matHeaderCellDef mat-header-cell mat-sort-header> Order Status</th>
+      <td *matCellDef="let element" mat-cell>{{ element.status }}</td>
+    </ng-container>
+
+    <!-- Total price column -->
+    <ng-container matColumnDef="totalPrice">
+      <th *matHeaderCellDef mat-header-cell mat-sort-header> Total</th>
+      <td *matCellDef="let element" mat-cell>{{ element.total }}</td>
+    </ng-container>
+
+    <tr *matHeaderRowDef="displayedColumns" mat-header-row></tr>
+    <tr *matRowDef="let row; columns:displayedColumns" mat-row></tr>
+
+    <!-- Row shown when there is no matching data. -->
+    <tr class="mat-row" *matNoDataRow>
+      <td class="mat-cell" colspan="4">No data matching the filter </td>
+    </tr>
+
+  </table>
+
+  <!-- Paginator child component-->
+  <mat-paginator [pageSizeOptions]="[5, 10, 15]" [pageSize]="10" showFirstLastButtons></mat-paginator>
+
+</div>
