--- a/src/app/admin-orders/pages/orders-management/orders-management.component.html
+++ b/src/app/admin-orders/pages/orders-management/orders-management.component.html
@@ -1,6 +1,23 @@
 <!-- Orders Catalogue -->
 <div class="table-wrapper">
-  <h1>Orders</h1>
+  <h1>Orders Management</h1>
+
+  <!--Expansion panel-->
+  <mat-accordion class="example-headers-align" multi>
+    <mat-expansion-panel>
+      <mat-expansion-panel-header>
+      </mat-expansion-panel-header>
+      <!--Add/Edit Form-->
+      <app-order-create-and-edit (editCanceled)="onCancelEdit()"
+                                 (orderAdded)="onOrderAdded($event)"
+                                 (orderUpdated)="onOrderUpdated($event)"
+                                 [editMode] = "isEditMode"
+                                 [order]="orderData"></app-order-create-and-edit>
+
+    </mat-expansion-panel>
+  </mat-accordion>
+
+  <br/>
 
   <!-- Data table -->
   <table mat-table [dataSource]="dataSource" class="mat-elevation-z5" matSort>
@@ -21,7 +38,7 @@
     <ng-container matColumnDef="productId">
       <th *matHeaderCellDef mat-header-cell mat-sort-header> Product Id</th>
       <td *matCellDef="let element" mat-cell>
-        <a [routerLink]="['/users/product', element.id]"> {{ element.productId }} </a></td>
+        <a [routerLink]="['/users/product', element.productId]"> {{ element.productId }} </a></td>
     </ng-container>
 
     <!-- Shipping address column -->
@@ -48,13 +65,23 @@
       <td *matCellDef="let element" mat-cell>{{ element.total }}</td>
     </ng-container>
 
-    <tr *matHeaderRowDef="displayedColumns" mat-header-row></tr>
-    <tr *matRowDef="let row; columns:displayedColumns" mat-row></tr>
+    <!-- Actions column -->
+    <!-- Review use -->
+    <ng-container matColumnDef="actions">
+      <th *matHeaderCellDef mat-header-cell> Actions</th>
+      <td *matCellDef="let element" mat-cell>
+        <!--<a (click)="onEditItem(element)" href="javascript:void(0)"><mat-icon>edit</mat-icon></a>-->
+        <a (click)="onDeleteItem(element)" href="javascript:void(0)"><mat-icon>delete</mat-icon></a>
+      </td>
+    </ng-container>
 
     <!-- Row shown when there is no matching data. -->
     <tr class="mat-row" *matNoDataRow>
-      <td class="mat-cell" colspan="4">No data matching the filter </td>
+      <td class="mat-cell" colspan="4">No data matching </td>
     </tr>
+
+    <tr *matHeaderRowDef="displayedColumns" mat-header-row></tr>
+    <tr *matRowDef="let row; columns:displayedColumns" [ngClass]="{'editable-row': orderData.id === row.id }" mat-row></tr>
 
   </table>
 
