--- a/src/app/public/pages/user-page/checkout/checkout.component.css
+++ b/src/app/public/pages/user-page/checkout/checkout.component.css
@@ -42,13 +42,6 @@
   width: 100%;
 }
 
-button[mat-flat-button] {
-  padding: 10px;
-  font-size: 1em;
-  text-transform: uppercase;
-  margin-bottom: 10px;
-}
-
 .empty-cart-container {
   display: flex;
   flex-direction: column;
@@ -58,6 +51,9 @@ button[mat-flat-button] {
   background-color: #f9f9f9;
   border-radius: 8px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  width: 100%;
+  max-width: 500px;
+  margin: 0 auto;
 }
 
 .empty-cart-message {
@@ -68,4 +64,11 @@ button[mat-flat-button] {
 .empty-cart-subtext {
   font-size: 1.2em;
   margin-bottom: 20px;
+}
+
+button[mat-flat-button] {
+  padding: 10px;
+  font-size: 1em;
+  text-transform: uppercase;
+  margin-bottom: 10px;
 }
