--- a/src/app/public/pages/user-page/user-page.component.html
+++ b/src/app/public/pages/user-page/user-page.component.html
@@ -20,9 +20,13 @@
       <mat-icon>shopping_cart</mat-icon>
       <span matBadge="{{ cartItemCount }}" matBadgeOverlap="false"> </span>
     </button>
+    <button mat-icon-button class="orders-customer" aria-label="" routerLink="/users/orders" >
+      <mat-icon> table_chart</mat-icon>
+    </button>
     <button mat-icon-button class="account-icon" aria-label="" routerLink="/users/auth" >
       <mat-icon>account_circles</mat-icon>
     </button>
+
   </div>
 
 </mat-toolbar>
