--- a/src/app/public/pages/user-page/checkout/checkout.component.html
+++ b/src/app/public/pages/user-page/checkout/checkout.component.html
@@ -20,7 +20,7 @@
       <div class="cart-actions">
         <h2 class="total">Total: {{ total | currency }}</h2>
         <span class="mat-spacer"></span>
-        <button mat-flat-button color="primary" routerLink="/users/payment-form"> <mat-icon>shopping_cart</mat-icon>
+        <button mat-flat-button color="primary" routerLink="/users/shipping-page"> <mat-icon>shopping_cart</mat-icon>
            Ir a Pagar </button>
         <p>
         <button mat-flat-button color="warn" (click)="clearCart()"> 	<mat-icon>delete_outline</mat-icon> Vaciar Carrito</button>
