--- a/src/app/public/pages/auth-store/auth-page-store/login-store/login-store.component.css
+++ b/src/app/public/pages/auth-store/auth-page-store/login-store/login-store.component.css
@@ -1,10 +1,14 @@
-
+.container-fluid {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50vh;
+}
 
 .login-form {
   max-width: 300px;
-  margin: 0 auto;
+  width: 100%;
   padding: 20px;
-
 }
 
 .form-field {
@@ -16,23 +20,15 @@
   width: 100%;
 }
 
-.container {
-  border: 1px solid rgba(56, 53, 53, 0.38);
-  width: 30%;
-  paint: 20px;
-  margin-left: 35%;
-  border-radius: 20px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.50); /* Sombra */
-}
-
-body{
+body {
   display: flex;
-  align-content: center;
+  justify-content: center;
+  align-items: center;
   text-align: center;
 }
-h1{
+
+h1 {
   margin-top: 20px;
-  margin-left: 0;
   text-align: center;
   font-weight: bold; /* Texto en negrita */
   color: #003785;
