--- a/src/app/public/pages/auth-store/auth-page-store/register-store/register-store.component.css
+++ b/src/app/public/pages/auth-store/auth-page-store/register-store/register-store.component.css
@@ -1,8 +1,8 @@
 
-
 .login-form {
   max-width: 300px;
   margin: 0 auto;
+
   padding: 20px;
 
 }
@@ -32,8 +32,9 @@ body{
 }
 h1{
   margin-top: 20px;
-  margin-left: 0;
   text-align: center;
+
+  margin-left: 0%;
   font-weight: bold; /* Texto en negrita */
   color: #003785;
 }
