--- a/src/app/user-products/components/user-product-detail/user-product-detail.component.css
+++ b/src/app/user-products/components/user-product-detail/user-product-detail.component.css
@@ -63,10 +63,13 @@
 }
 .product-information-section{
   width: 100%;
-  height: 400px;
+  height: 500px;
   padding: 2rem;
   border: 2px solid #CACEDE;
   border-radius: 25px;
+}
+.comparator-container{
+  margin-bottom: 20px;
 }
 .product-information-section button{
   width:100%;
@@ -114,6 +117,10 @@
   padding: 0;
   border: none;
   display: none;
+}
+
+.comparator-container{
+
 }
 
 @media (min-width: 750px){
