--- a/src/app/user-products/components/user-product-detail/user-product-detail.component.html
+++ b/src/app/user-products/components/user-product-detail/user-product-detail.component.html
@@ -23,11 +23,12 @@
           <p class="information-container-label">Brand: </p>
           <p class="information-product-brand">{{productData.brand}}</p>
         </div>
-        <div class="quantity-selector">
-          <label for="quantity">Quantity:</label>
-          <input type="number" id="quantity" min="1" max="100" [(ngModel)]="selectedQuantity">
-        </div>
-        <div>
+        <p style="font-size: 15px;font-weight: 500;margin-top: 5px">Price Comparator </p>
+<!--        <div class="quantity-selector">-->
+<!--          <label for="quantity">Quantity:</label>-->
+<!--          <input type="number" id="quantity" min="1" max="100" [(ngModel)]="selectedQuantity">-->
+<!--        </div>-->
+        <div class="comparator-container">
           <app-comparator [product]="productData" ></app-comparator>
         </div>
 
