fix: product router in orders

--- a/src/app/admin-orders/pages/orders-management/orders-management.component.html
+++ b/src/app/admin-orders/pages/orders-management/orders-management.component.html
@@ -39,7 +39,7 @@
     <ng-container matColumnDef="productId">
       <th *matHeaderCellDef mat-header-cell mat-sort-header> Product Id</th>
       <td *matCellDef="let element" mat-cell>
-        <a [routerLink]="['/users/product', element.productId]"> {{ element.productId }} </a></td>
+        <a [routerLink]="['/users/user-product-detail', element.productId]"> {{ element.productId }} </a></td>
     </ng-container>
 
     <!-- Shipping address column -->
