--- a/src/app/public/pages/user-page/checkout/checkout.component.html
+++ b/src/app/public/pages/user-page/checkout/checkout.component.html
@@ -35,7 +35,7 @@
     <img src="https://rukminim1.flixcart.com/www/800/800/promos/16/05/2019/d438a32e-765a-4d8b-b4a6-520b560971e8.png?q=90" alt="">
     <p class="empty-cart-message">¡Tu carrito está vacío!</p>
     <p class="empty-cart-subtext">Parece que aún no has añadido ningún artículo. Explora nuestros productos y encuentra lo que necesitas.</p>
-    <button mat-flat-button color="primary" routerLink="/users/product-page">Comenzar a comprar</button>
+    <button mat-flat-button color="primary" class="btn" routerLink="/users/product-page">Comenzar a comprar</button>
   </div>
 </ng-template>
 
