--- a/src/app/public/pages/user-page/user-page.component.html
+++ b/src/app/public/pages/user-page/user-page.component.html
@@ -10,9 +10,9 @@
   <input class="search-input" matInput placeholder="Search" >
 
   <div>
-    <button mat-icon-button class="example-icon" routerLink="/users/product-page">
-      <mat-icon>store_mall_directory</mat-icon>
-    </button>
+<!--    <button mat-icon-button class="example-icon" routerLink="/users/product-page">-->
+<!--      <mat-icon>store_mall_directory</mat-icon>-->
+<!--    </button>-->
     <button mat-icon-button class="example-icon favorite-icon" aria-label="" routerLink="/users/wishlist" routerLinkActive="active">
       <mat-icon>favorite</mat-icon>
       <span matBadge="{{ wishlistItemCount }}" matBadgeOverlap="false"> </span>
