--- a/src/app/user-products/components/list-products-view/list-products-view.component.css
+++ b/src/app/user-products/components/list-products-view/list-products-view.component.css
@@ -6,7 +6,49 @@
   flex-wrap: wrap;
   gap: 30px;
 }
+.filter-section{
+  width: 100%;
+  display: flex;
+  justify-content: end;
+}
 
+.filter-section .button-filter{
+  margin-right: 20px;
+  margin-top: 15px;
+}
+
+.container-products{
+  width: 100%;
+  margin-top: 20px;
+  padding: 30px;
+  display: flex;
+  justify-content: center;
+
+}
+.content-container{
+  height: auto;
+  padding: 30px 0;
+}
+
+@media only screen and (min-width: 1159px) {
+  .filter-section {
+    display: none;
+  }
+  .content-container{
+    display: flex;
+  }
+
+
+}
+/* Show toolbar-title only on tablet screens */
+@media (min-width: 600px)  {
+  .toolbar-title {
+    display: inline-block;
+  }
+  .account-icon{
+    display: inline-block;
+  }
+}
 @media (min-width: 1490px) {
   .container-products{
     justify-content: start;
