--- a/src/app/user-products/components/user-product-detail/user-product-detail.component.html
+++ b/src/app/user-products/components/user-product-detail/user-product-detail.component.html
@@ -2,7 +2,7 @@
 
   <section class="product-section">
 
-    <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon" [routerLink]="'/users/product-page'" >
+    <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon" (click)="backProducts()" >
       <mat-icon>keyboard_backspace</mat-icon>
     </button>
 
