--- a/src/app/public/pages/user-page/wishlist/wishlist.component.css
+++ b/src/app/public/pages/user-page/wishlist/wishlist.component.css
@@ -101,39 +101,51 @@
   background-color: #003785;
 }
 
+
+.empty-section{
+  width: 100%;
+  display: grid;
+  place-items: center;
+}
 .empty-wishlist-container {
   text-align: center;
   padding: 32px;
-  background-color: #f5f5f5; /* Fondo ligero para resaltar la sección */
-  border: 2px dashed #ccc; /* Borde dashed para dar una indicación visual de un área vacía */
-  border-radius: 8px; /* Bordes redondeados */
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Sombra para darle profundidad */
-  transition: transform 0.3s ease, box-shadow 0.3s ease; /* Transición para hover */
-  margin-top: 20px; /* Espacio superior */
+  background-color: #f5f5f5;
+  border: 2px dashed #ccc;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  margin: 0 auto;
+  margin-top: 20px;
+  width: 90%;
+  height: auto;
+
 }
 
 .empty-wishlist-container:hover {
-  transform: scale(1.02); /* Ligeramente aumentar el tamaño en hover */
-  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2); /* Sombra más pronunciada en hover */
+  transform: scale(1.02);
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
 }
 
 .empty-wishlist-message {
-  font-size: 2em; /* Tamaño de fuente grande */
+  font-size: 2em;
   font-weight: bold;
-  color: #333; /* Color del texto */
-  margin-bottom: 16px; /* Espaciado inferior */
+  color: #333;
+  margin-bottom: 16px;
+  line-height: 95%;
 }
 
 .empty-wishlist-subtext {
-  font-size: 1.2em; /* Tamaño de fuente */
-  color: #777; /* Color gris */
-  margin-bottom: 24px; /* Espaciado inferior */
+  font-size: 1.2em;
+  color: #777;
+  margin-bottom: 24px;
 }
 
 .primary-button {
-  background-color: #3f51b5;
+  background-color: black;
   color: #fff;
   border: none;
+  width: 150px;
   padding: 12px 24px;
   border-radius: 4px;
   cursor: pointer;
@@ -143,7 +155,7 @@
 }
 
 .primary-button:hover {
-  background-color: #303f9f; 
+  background-color: #1565c0;
   transform: translateY(-3px);
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
 }
